fixed search bar resize jump behaviour

--- a/frontend/src/styles/SearchBar.css
+++ b/frontend/src/styles/SearchBar.css
@@ -1,15 +1,15 @@
 .search-box{
     position: absolute;
-    top:70%;
+    top:40%;
     left: 50%;
     transform: translate(-50%,-50%);
     z-index: 1;
     border: 4px solid #2980b9;
     padding: 0 10px;
     border-radius: 50px;
-
     background-color: rgba(255, 255, 255, 0.80);
     color: #050505;
+    max-width: 60%
 }
 
 .elementsContainer{
